# ds4vr

./: .gitignore  CMakeLists.txt  README.md  ds4vr.ini
driver/ds4vr/: driver.vrdrivermanifest
driver/ds4vr/resources/input/: touch_profile.json
driver/ds4vr/resources/settings/: default.vrsettings
scripts/: build.ps1  install.ps1  package.ps1  uninstall.ps1
src/: config.cpp  config.h  dllmain.cpp  ds4_parser.cpp  ds4_parser.h  dualsense_parser.cpp  dualsense_parser.h  engagement.cpp  engagement.h  hid_device.cpp  hid_device.h  imu_fusion.cpp  imu_fusion.h  input_state.h  math_types.h  server_driver.cpp  server_driver.h  touch_device.cpp  touch_device.h
